# cpp_libraries

./: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  MathLibrary.cpp  MathLibrary.hpp
